--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
     <description>The jQAssistant plugin for scanning and validating GraphQL schemas.</description>
     <url>https://github.com/jqassistant-contrib/jqassistant-graphql-plugin</url>
 
+    <licenses>
+        <license>
+            <name>GNU General Public License, v3</name>
+            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+        </license>
+    </licenses>
+
     <developers>
         <developer>
             <id>dirk-mahler</id>
