--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.jqassistant.contrib.common</groupId>
+
+        <groupId>com.buschmais.jqassistant.plugin</groupId>
         <artifactId>parent</artifactId>
-        <version>1.8.2</version>
+        <version>1.9.0-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
-    <groupId>org.jqassistant.contrib.plugin</groupId>
-    <artifactId>jqassistant-graphql-plugin</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <groupId>com.buschmais.jqassistant.plugin</groupId>
+    <artifactId>graphql</artifactId>
+    <version>1.9.0-SNAPSHOT</version>
 
     <name>jQAssistant GraphQL Plugin</name>
+    <url>http://jqassistant.org/</url>
     <description>The jQAssistant plugin for scanning and validating GraphQL schemas.</description>
-    <url>https://github.com/jqassistant-contrib/jqassistant-graphql-plugin</url>
+
+    <scm>
+        <connection>scm:git:git@github.com:jqassistant/jqa-graphql-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:jqassistant/jqa-graphql-plugin.git</developerConnection>
+        <url>https://github.com/jqassistant/jqa-graphql-plugin</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <licenses>
         <license>
@@ -31,16 +40,9 @@
         </developer>
     </developers>
 
-    <scm>
-        <connection>scm:git:git@github.com:jqassistant-contrib/jqassistant-graphql-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:jqassistant-contrib/jqassistant-graphql-plugin.git
-        </developerConnection>
-        <url>https://github.com/jqassistant-contrib/jqassistant-graphql-plugin</url>
-        <tag>HEAD</tag>
-    </scm>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jqa-plugin-common.version>1.9.0-SNAPSHOT</jqa-plugin-common.version>
     </properties>
 
     <dependencies>
@@ -78,18 +80,15 @@
         <dependency>
             <groupId>com.buschmais.jqassistant.plugin</groupId>
             <artifactId>common</artifactId>
+            <version>${jqa-plugin-common.version}</version>
             <scope>provided</scope>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
-            <groupId>com.buschmais.jqassistant.neo4jserver</groupId>
-            <artifactId>neo4jv3</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>com.buschmais.jqassistant.plugin</groupId>
             <artifactId>common</artifactId>
             <type>test-jar</type>
+            <version>${jqa-plugin-common.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -130,15 +129,15 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>2.2.4.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -154,4 +153,16 @@
             </exclusions>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
 </project>
