--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
 
         <groupId>com.buschmais.jqassistant.plugin</groupId>
         <artifactId>parent</artifactId>
-        <version>1.9.0-SNAPSHOT</version>
+        <version>1.9.0-ALPHA1</version>
         <relativePath/>
     </parent>
 
     <groupId>com.buschmais.jqassistant.plugin</groupId>
     <artifactId>graphql</artifactId>
-    <version>1.9.0-SNAPSHOT</version>
+    <version>1.9.0-ALPHA1</version>
 
     <name>jQAssistant GraphQL Plugin</name>
     <url>http://jqassistant.org/</url>
@@ -42,7 +40,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jqa-plugin-common.version>1.9.0-SNAPSHOT</jqa-plugin-common.version>
+        <jqa-plugin-common.version>1.9.0-ALPHA1</jqa-plugin-common.version>
         <com.sun.jersey.version>1.19.4</com.sun.jersey.version>
         <org.springframework.boot.version>2.2.4.RELEASE</org.springframework.boot.version>
     </properties>
