--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
         <groupId>com.buschmais.jqassistant.plugin</groupId>
         <artifactId>parent</artifactId>
-        <version>1.9.0</version>
+        <version>1.10.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>com.buschmais.jqassistant.plugin</groupId>
     <artifactId>graphql</artifactId>
-    <version>1.9.0</version>
+    <version>1.10.0-SNAPSHOT</version>
 
     <name>jQAssistant GraphQL Plugin</name>
     <url>http://jqassistant.org/</url>
@@ -45,7 +45,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jqa-plugin-common.version>1.9.0</jqa-plugin-common.version>
+        <jqa-plugin-common.version>1.10.0-SNAPSHOT</jqa-plugin-common.version>
         <com.sun.jersey.version>1.19.4</com.sun.jersey.version>
         <org.springframework.boot.version>2.2.4.RELEASE</org.springframework.boot.version>
         <asciidoctor.toplevelid>graphql-plugin</asciidoctor.toplevelid>
