--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>1.12.0-SNAPSHOT</version>
 
     <name>jQAssistant GraphQL Plugin</name>
-    <url>http://jqassistant.org/</url>
+    <url>https://jqassistant.org/</url>
     <description>The jQAssistant plugin for scanning and validating GraphQL schemas.</description>
 
     <scm>
