--- a/pom.xml
+++ b/pom.xml
@@ -2,24 +2,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.jqassistant.contrib.common</groupId>
+        <groupId>org.jqassistant.plugin</groupId>
         <artifactId>parent</artifactId>
-        <version>1.13.0-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
-    <groupId>org.jqassistant.plugin</groupId>
-    <artifactId>jqa-graphql-plugin</artifactId>
-    <version>1.13.0-SNAPSHOT</version>
+    <artifactId>jqassistant-graphql-plugin</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
 
     <name>jQAssistant GraphQL Plugin</name>
     <url>https://jqassistant.org/</url>
     <description>The jQAssistant plugin for scanning and validating GraphQL schemas.</description>
 
     <scm>
-        <connection>scm:git:git@github.com:jqassistant-plugin/jqa-gcraphql-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:jqassistant-plugin/jqa-graphql-plugin.git</developerConnection>
-        <url>https://github.com/jqassistant-plugin/jqa-graphql-plugin</url>
+        <connection>scm:git:https://github.com/jqassistant-plugin/jqassistant-graphql-plugin.git</connection>
+        <developerConnection>scm:git:https://github.com/jqassistant-plugin/jqassistant-graphql-plugin.git</developerConnection>
+        <url>https://github.com/jqassistant-plugin/jqassistant-graphql-plugin</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -55,11 +54,6 @@
         <dependency>
             <groupId>com.buschmais.jqassistant.core</groupId>
             <artifactId>scanner</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.buschmais.jqassistant.core</groupId>
-            <artifactId>store</artifactId>
-            <type>test-jar</type>
         </dependency>
         <dependency>
             <groupId>com.buschmais.jqassistant.neo4jserver</groupId>
