--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jqa-plugin-common.version>1.13.0-SNAPSHOT</jqa-plugin-common.version>
+        <jqa-plugin-common.version>2.0.0-M1</jqa-plugin-common.version>
         <com.sun.jersey.version>1.19.4</com.sun.jersey.version>
         <org.springframework.boot.version>2.2.4.RELEASE</org.springframework.boot.version>
     </properties>
@@ -56,8 +56,8 @@
             <artifactId>scanner</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.buschmais.jqassistant.neo4jserver</groupId>
-            <artifactId>neo4jv3</artifactId>
+            <groupId>com.buschmais.jqassistant.neo4j</groupId>
+            <artifactId>embedded</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
