--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jqassistant.plugin</groupId>
         <artifactId>parent</artifactId>
-        <version>2.0.0-M2</version>
+        <version>2.0.0</version>
         <relativePath/>
     </parent>
 
@@ -44,7 +44,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jqa-plugin-common.version>2.0.0-M3</jqa-plugin-common.version>
+        <jqa-plugin-common.version>2.0.0</jqa-plugin-common.version>
         <com.sun.jersey.version>1.19.4</com.sun.jersey.version>
         <org.springframework.boot.version>2.2.4.RELEASE</org.springframework.boot.version>
     </properties>
