--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>jqassistant-graphql-plugin</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <name>jQAssistant GraphQL Plugin</name>
     <url>https://jqassistant.org/</url>
@@ -19,7 +19,7 @@
         <connection>scm:git:https://github.com/jqassistant-plugin/jqassistant-graphql-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/jqassistant-plugin/jqassistant-graphql-plugin.git</developerConnection>
         <url>https://github.com/jqassistant-plugin/jqassistant-graphql-plugin</url>
-        <tag>2.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <organization>
