--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jqassistant.plugin</groupId>
         <artifactId>parent</artifactId>
-        <version>2.0.0</version>
+        <version>2.3.0</version>
         <relativePath />
     </parent>
 
@@ -56,8 +56,8 @@
             <artifactId>scanner</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.buschmais.jqassistant.neo4j</groupId>
-            <artifactId>embedded</artifactId>
+            <groupId>com.buschmais.xo</groupId>
+            <artifactId>xo.api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
